Misc. bug fixes

--- a/Settings.bundle/Advanced~ipad.plist
+++ b/Settings.bundle/Advanced~ipad.plist
@@ -56,7 +56,7 @@
 			<key>FooterText</key>
 			<string>These should not be enables unless you are specifically requested to do so after contacting ZotPad support.</string>
 		</dict>
-		<dict>
+<!-- 		<dict>
 			<key>Type</key>
 			<string>PSToggleSwitchSpecifier</string>
 			<key>Title</key>
@@ -76,6 +76,7 @@
 			<key>DefaultValue</key>
 			<false/>
 		</dict>
+-->
         <dict>
 			<key>Type</key>
 			<string>PSToggleSwitchSpecifier</string>
@@ -93,6 +94,16 @@
 			<string>Debug citation parser</string>
 			<key>Key</key>
 			<string>debugcitationparser</string>
+			<key>DefaultValue</key>
+			<false/>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>Debug file uploads</string>
+			<key>Key</key>
+			<string>debugfileuploads</string>
 			<key>DefaultValue</key>
 			<false/>
 		</dict>
