--- a/Settings.bundle/Advanced~ipad.plist
+++ b/Settings.bundle/Advanced~ipad.plist
@@ -58,6 +58,22 @@
 			<key>DefaultValue</key>
 			<true/>
 		</dict>
+        <dict>
+			<key>Type</key>
+			<string>PSGroupSpecifier</string>
+			<key>Title</key>
+			<string>File viewer</string>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>Disable built-in viewer and send to GoodReader instead</string>
+			<key>Key</key>
+			<string>disablebuiltinviewerandsendtogoodreader</string>
+			<key>DefaultValue</key>
+			<false/>
+		</dict>
 		<dict>
 			<key>Type</key>
 			<string>PSGroupSpecifier</string>
