Added the ability to upload files with support tickets

--- a/Settings.bundle/Advanced~ipad.plist
+++ b/Settings.bundle/Advanced~ipad.plist
@@ -42,7 +42,7 @@
 			<key>DefaultValue</key>
 			<false/>
 		</dict>
-        <dict>
+		<dict>
 			<key>Type</key>
 			<string>PSGroupSpecifier</string>
 			<key>Title</key>
@@ -58,7 +58,7 @@
 			<key>DefaultValue</key>
 			<true/>
 		</dict>
-        <dict>
+		<dict>
 			<key>Type</key>
 			<string>PSGroupSpecifier</string>
 			<key>Title</key>
@@ -82,28 +82,7 @@
 			<key>FooterText</key>
 			<string>These should not be enables unless you are specifically requested to do so after contacting ZotPad support.</string>
 		</dict>
-<!-- 		<dict>
-			<key>Type</key>
-			<string>PSToggleSwitchSpecifier</string>
-			<key>Title</key>
-			<string>Include database dump in support requests</string>
-			<key>Key</key>
-			<string>supportincludedatabase</string>
-			<key>DefaultValue</key>
-			<false/>
-		</dict>
 		<dict>
-			<key>Type</key>
-			<string>PSToggleSwitchSpecifier</string>
-			<key>Title</key>
-			<string>Include file listing in support requests</string>
-			<key>Key</key>
-			<string>supportincludefilelisting</string>
-			<key>DefaultValue</key>
-			<false/>
-		</dict>
--->
-        <dict>
 			<key>Type</key>
 			<string>PSToggleSwitchSpecifier</string>
 			<key>Title</key>
@@ -127,19 +106,39 @@
 			<key>Type</key>
 			<string>PSToggleSwitchSpecifier</string>
 			<key>Title</key>
-			<string>Debug file uploads</string>
+			<string>Debug file uploads and downloads</string>
 			<key>Key</key>
 			<string>debugfileuploads</string>
 			<key>DefaultValue</key>
 			<false/>
 		</dict>
-        <dict>
+		<dict>
 			<key>Type</key>
 			<string>PSToggleSwitchSpecifier</string>
 			<key>Title</key>
 			<string>Debug Zotero API calls</string>
 			<key>Key</key>
 			<string>debugserverrequests</string>
+			<key>DefaultValue</key>
+			<false/>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>Include database in support requests</string>
+			<key>Key</key>
+			<string>supportincludedatabase</string>
+			<key>DefaultValue</key>
+			<false/>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>Include file list in support requests</string>
+			<key>Key</key>
+			<string>supportincludefilelisting</string>
 			<key>DefaultValue</key>
 			<false/>
 		</dict>
